# timely

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
.claude/agents/ux-researcher/: ux-researcher.md
.claude/skills/ux-review/: SKILL.md
.github/workflows/: release.yml  setup-tap.yml
Formula/: timely.rb
dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
dashboard/e2e/: dashboard.spec.ts
dashboard/server/: db-writer.ts  db.ts  index.ts
dashboard/server/routes/: apps.ts  categories.ts  current.ts  productivity.ts  rules.ts  summary.ts  timeline.ts  trends.ts  urls.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: app-breakdown-table.tsx  browse-urls.tsx  category-bar-chart.tsx  (+10 more)
docs/future/: interface-strategy.md  multi-device-sync.md
packaging/homebrew/: update-formula.sh
packaging/macos/: Info.plist  bundle.sh
src/: config.rs  error.rs  lib.rs  main.rs  output.rs  platform.rs  types.rs
src/categories/: builtin.rs  mod.rs
src/cli/: categorize.rs  config_cmd.rs  daemon.rs  dashboard.rs  devices.rs  export.rs  focus.rs  import_cmd.rs  mod.rs  now.rs  summary.rs  sync_cmd.rs  timeline.rs  trends.rs  update.rs
src/daemon/: heartbeat.rs  mod.rs
src/db/: categories.rs  config_store.rs  devices.rs  events.rs  mod.rs  schema.rs  sync.rs
src/query/: apps.rs  current.rs  focus.rs  mod.rs  productivity.rs  summary.rs  timeline.rs  trends.rs
src/sync/: auth.rs  client.rs  mod.rs  server.rs
src/watchers/: afk_macos.rs  browser_macos.rs  mod.rs  tui_macos.rs  window_macos.rs
src/web/: assets.rs  handlers.rs  mod.rs  router.rs
tests/: category_test.rs  focus_test.rs  heartbeat_test.rs  query_test.rs  sync_test.rs
(+7 files in other folders)
