[package]
name = "timely"
version = "0.2.0"
edition = "2021"
description = "A lightweight, agent-friendly activity tracker for macOS"
repository = "https://github.com/Bhavikpatel576/timely"
license = "MIT"
homepage = "https://github.com/Bhavikpatel576/timely"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
signal-hook = "0.3"
thiserror = "1"
libc = "0.2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
